# cursor-rpg-studios

./: .gitignore  CHANGES.md  LICENSE  MANIFEST.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  STYLE_BIBLE.md  TASKLIST.md  mcp.json  pytest.ini  quantum_plaid.md
.cursor/agents/directors/: creative-director.md  mechanics-director.md  narrative-director.md  producer.md
.cursor/agents/leads/: cartography-lead.md  editorial-lead.md  lore-keeper.md  procedural-lead.md  world-architect.md
.cursor/agents/specialists/: gis-datum-specialist.md  (+1 more)
.cursor/rules/: fcop-routing.mdc  human-in-the-loop.mdc  output-organization-universal.mdc  output-organization.mdc  quantum-plaid-density.mdc  stat-block-safety.mdc
.cursor/skills/: README.md
.github/workflows/: ci.yml
agents/: README.md
data/schemas/: alexandria_npc_entry_v1.schema.json
docs/: cartography-standards.md  cursor-install.md  cursor-setup.md  hardware-runbook.md  human-machine-dual-layer-pattern.md  index.md
docs/audits/: style-audit-phase0.md
hardware/: README.md
lore/alexandria-unbound/: README.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/lorevault_mcp/: __init__.py  server.py  tools_logic.py
procedural/datum/: README.md
procedural/gis/: README.md
procedural/roads/: README.md
procedural/settlements/: README.md
skills/: 00-skill-forge-matrix.md
tests/: reader_template_checks.py  test_anchor_subset.py  test_mcp_tools.py  test_npc_schema.py  test_reader_template.py
tests/fixtures/: canonical_excerpt.md  reader_companion_bad_order.md  reader_companion_valid.md
(+11 files in other folders)
